# scurry-web

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  input.css  scurry-web-1061e45884014526.js  scurry-web-1061e45884014526_bg.wasm  scurry-web-12801e66582cf60a.js  scurry-web-12801e66582cf60a_bg.wasm  scurry-web-29d16bea878ce714.js  scurry-web-29d16bea878ce714_bg.wasm  scurry-web-2be041b76e32da64.js  scurry-web-2be041b76e32da64_bg.wasm  scurry-web-32e9ee74eb6292ab.js  scurry-web-32e9ee74eb6292ab_bg.wasm  scurry-web-340aef7a9ec10ca2.js  scurry-web-340aef7a9ec10ca2_bg.wasm  scurry-web-3adf944e67fc7544.js  scurry-web-3adf944e67fc7544_bg.wasm  scurry-web-3fc88b73d123b7be.js  scurry-web-3fc88b73d123b7be_bg.wasm  scurry-web-4e1163b95800130c.js  scurry-web-4e1163b95800130c_bg.wasm  scurry-web-6015e10be6458e16.js  scurry-web-6015e10be6458e16_bg.wasm  scurry-web-69ace4e72bf82f2e.js  scurry-web-69ace4e72bf82f2e_bg.wasm  scurry-web-6acd22420fdc8dc.js  scurry-web-6acd22420fdc8dc_bg.wasm  scurry-web-8286e3d03183e968.js  scurry-web-8286e3d03183e968_bg.wasm  scurry-web-9a6c200975f9a833.js  scurry-web-9a6c200975f9a833_bg.wasm  scurry-web-9c206c47208aa720.js  scurry-web-9c206c47208aa720_bg.wasm  scurry-web-9ff59577649ed1d5.js  scurry-web-9ff59577649ed1d5_bg.wasm  scurry-web-a16a9e5e02cc3936.js  scurry-web-a16a9e5e02cc3936_bg.wasm  (+26 more)
.github/workflows/: deploy.yml
snippets/scurry-web-21947a62bf5288a1/: inline0.js
src/: bar_item.rs  example.rs  main.rs
src/editor/: mod.rs  run_button.rs
static/examples/: hello_world.scy
