[package]
name = "scurry-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3.60", features = ["HtmlParagraphElement"] }
wasm-bindgen = "0.2.83"
scurry = { version = "0.4.0", default-features = false }
