[package]
name = "scurry-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.60", features = ["HtmlParagraphElement"] }
wasm-bindgen = "0.2.83"
scurry = { version = "0.4.3", default-features = false }
yew_icons = {version = "0.7", features = ["FontAwesomeSolidChevronRight", "BootstrapGithub", "HeroiconsOutlineDocumentText"]}
